Removed unneeded argument since I removed the old queue based system to a websocket based approach.